.opsera-chat-app/k8s/overlays/qa/namespace.yaml
# ╔══════════════════════════════════════════════════════════════════════════════╗
# ║  NAMESPACE - chat-app QA Environment                                           ║
# ║  Generated by Code-to-Cloud v0.6 - Powered by Opsera                          ║
# ╚══════════════════════════════════════════════════════════════════════════════╝

apiVersion: v1
kind: Namespace
metadata:
  name: chat-app-qa
  labels:
    app.kubernetes.io/name: chat-app
    environment: qa
